Fixed the astronaut and add planet www orbit

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         </div>
       </nav>
       <h1 class="header-first-sec sticky-top neon-effect">CASIMIRO</h1>
-      <p class="sticky-top">Apprendista Full Stack Developer</p>
-      <div class="astronaut">        
-        <img src="./img/astronaut.png" alt="astronaut-img-from-canva">
-      </div>
-      <div class="container-image-up">
-        <img src="./img/universe.svg" alt="casimiro-universe">
-      </div>
+      <h3 class="sticky-top">Apprendista Full Stack Developer</h3>
+      <div class="illustration">
+        <div class="astronaut"></div>
+        <div class="universe">      
+        </div>              
+        <div class="planet-www"></div> 
+      </div>     
     </div>
 
     <!-- Second Section, I'm a programmer -->
@@ -199,13 +199,13 @@
         Contatti
       </h2>
       <div class="footer-text">
-        <p class="text-justify text-center w-75 mx-auto">Per qualunque comnunicazione potete contattarmi al mio indirizzo email:
+        <p class="text-justify">Per qualunque comnunicazione potete contattarmi al mio indirizzo email:
           <br> <a href="mailto:cp.ciancimino@email.com">cp.ciancimino@gmail.com</a>
         </p>
       </div>
       <h3 class="text-center">RESTIAMO IN CONTATTO</h3>
-      <div class="social-links">
-        <ul class="d-flex justify-content-around">
+      <div class="social-links ">
+        <ul class="text-center">
           <li>
             <a href="https://www.linkedin.com/in/casimiro-p-ciancimino">
             <img class="social-img" src="./img/linkedin.png" alt="linkedin-casimiro"></a>
