--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
       <h3 class="sticky-top">Apprendista Full Stack Developer</h3>
       <div class="illustration">
         <div class="astronaut"></div>
-        <div class="universe">      
-        </div>              
-        <div class="planet-www"></div> 
+        <div class="universe"></div>              
+        <div class="planet-react"></div> 
+        <div class="planet-node"></div> 
+        <div class="planet-html"></div> 
+        <div class="planet-css"></div>         
+        <div class="planet-js"></div>         
+        <div class="planet-wp"></div>    
+        <div class="planet-git"></div>    
+        <div class="planet-npm"></div> 
       </div>     
     </div>
 
