Fix Project height

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               </div>
             </div>
             <p class="item-carousel-text col-12 col-md-6">Con questo progetto ho potuto apprendere e usare: <span class="custom-text-one">
-              Vue.Js, Vuetify, DOM interaction, Reactive Data and Events, Routing, JS, HTML5 & CSS3 
+              Vue.Js, Vuetify, DOM interaction, Reactive Data and Events, Routing, Advanced Javascript, HTML5 & CSS3 
             </span></p>
           </div>
           <div class="carousel-item">
@@ -186,7 +186,8 @@
                   navigando tra i miei progetti potresti trovare qualcosa di utile!</p>
               </div>
             </div>
-            <p class="item-carousel-text col-12 col-md-6"><span class="custom-text-one">Git, GitHub, TeamWorking, HacktoberFest 2020 (winner!)</span></p>
+            <p class="item-carousel-text col-12 col-md-6"><span class="custom-text-one">Git, GitHub, TeamWorking, Programming in Pair Open Source Collaboration
+              <br> (This year i won the HacktoberFest 2020!)</span></p>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
