--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casimiro | Un'altra pagina profilo</title>
+    <title>Casimiro | Digital</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
+  <body class="light-on">
 
     <!-- First Section and Navbar -->
     <div class="container first-sec text-center">
@@ -32,7 +32,8 @@
             </li>
         </div>
       </nav>
-      <h1 class="header-first-sec sticky-top neon-effect">CASIMIRO</h1>
+      <div class="light-bulb" id="turnLight"></div>
+      <h1 class="header-first-sec sticky-top">CASIMIRO</h1>
       <h3 class="sticky-top">Apprendista Full Stack Developer</h3>
       <div class="illustration">
         <div class="astronaut"></div>
@@ -93,7 +94,7 @@
                  è il <span class="custom-test-two"><strong>carburante delle mie giornate</strong> </span>, per questo ho sviluppato capacità trasversali di </p>
             </div>
         </div>
-        <div class="col-2 col-md-6 d-flex justify-content-end">
+        <div class="sec-philosopher col-2 col-md-6">
           <h1 class="third-sec-iam sticky-top">I'M A</h1>
           <h2 class="third-sec-head sticky-top">Philosopher</h2>
         </div>
@@ -202,17 +203,12 @@
 
     <!-- Last section, the Footer -->
     <div class="container-fluid footer" id="contatti">
-      <h2 class="contact text-center">
-        Contatti
-      </h2>
-      <div class="footer-text">
-        <p class="text-justify">Per qualunque comnunicazione potete contattarmi al mio indirizzo email:
-          <br> <a href="mailto:cp.ciancimino@email.com">cp.ciancimino@gmail.com</a>
-        </p>
-      </div>
       <h3 class="text-center">RESTIAMO IN CONTATTO</h3>
-      <div class="social-links ">
-        <ul class="text-center">
+      <div class="social-links text-center">
+        <p class="">Per qualunque comnunicazione potete contattarmi al mio indirizzo email:
+        <a href="mailto:cp.ciancimino@email.com">cp.ciancimino@gmail.com</a>
+      </p>
+        <ul>
           <li>
             <a href="https://www.linkedin.com/in/casimiro-p-ciancimino">
             <img class="social-img" src="./img/linkedin.png" alt="linkedin-casimiro"></a>
@@ -236,6 +232,7 @@
         </ul>
       </div>
     </div>
+    <script src="./script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
