Add arrow for the light-bulb

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
       </nav>
       <div class="light-bulb" id="turnLight"></div>
+      <div class="arrow-light-bulb"></div>
       <h1 class="header-first-sec sticky-top">CASIMIRO</h1>
       <h3 class="sticky-top">Apprendista Full Stack Developer</h3>
       <div class="illustration">
