--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             con 110 lodevoli "Casimiro, finalmente te ne vai!". Plus un master in <span class="custom-text">Global Marketing, Comunicazione e Made in Italy</span>.
           </p>
           <div class="container-soft-skills col-12">
-            <h2 class="soft-skills">Apprendimento</h2><hr>
+            <h2 class="soft-skills">Conoscenza</h2><hr>
             <h2 class="soft-skills">Astrazione</h2><hr>
             <h2 class="soft-skills">Creatività</h2>
           </div>
@@ -191,7 +191,7 @@
               </span></p>
             </div>
             <div class="carousel-item">
-              <h2 class="item-carousel-title">The Magic Books</h2>
+              <h2 class="item-carousel-title">The Magic Book</h2>
               <div class="row">
                 <div class="col-12 col-md-6">
                   <div class="proj d-flex justify-content-center">
@@ -219,8 +219,8 @@
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
-                  <p>Se ti ho incuriosito ma non troppo, <span class="custom-text"><strong>visita il mio profilo Github</strong></span>
-                    navigando tra i miei progetti potresti trovare qualcosa di utile!</p>
+                  <p>Se ti ho incuriosito e vuoi vedere altri miei progetti <span class="custom-text"><strong>visita il mio profilo Github</strong></span>,
+                    navigando tra i contenuti potresti trovare qualcosa di utile!</p>
                 </div>
               </div>
               <p class="col-12 col-md-6 col-xs-12"><span class="custom-text">Git, GitHub, TeamWorking, Programming in Pair Open Source Collaboration
