--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <img class="social-img"src="./img/instagram.png" alt="instagram-casimiro"></a>
           </li>
           <li class="social-item">
-            <a href="mailto:cp.ciancimino@email.com">
+            <a href="mailto:cp.ciancimino@gmail.com">
             <img class="social-img"src="./img/gmail.png" alt="email-casimiro"></a>
           </li>
           <li class="social-item">
