Add writing typer effect

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="light-bulb" id="turnLight"></div>
       <div class="arrow-light-bulb"></div>
       <h1 class="header-first-sec">CASIMIRO</h1>
-      <h3>Full Stack Developer</h3>
+      <h3 class="itsme">F</h3>
       <!-- planets skills -->
       <div>
         <div class="astronaut"></div>
@@ -269,6 +269,7 @@
     </div>
 
     <script src="./script.js"></script>
+    <script src="./writer.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
