Add shadows css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body class="light-on">
 
+    <!-- Background Pattern -->
+    <div class="bg-pattern"></div>
+
     <!-- 1. FIRST SECTION and NAVBAR -->
     <div class="first-sec container-fluid" id="home">
       <!-- navbar -->
